--- a/src/main/resources/templates/update-chatroom.html
+++ b/src/main/resources/templates/update-chatroom.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
@@ -10,19 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title th:text="${chatroom.chatroomName}"></title>
+    <title>Update Chatroom</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <link
             href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
             rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
-    <link th:href="@{/css/chatroom.css}" rel="stylesheet">
-
 
 </head>
 
@@ -46,7 +42,7 @@
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Dashboard -->
-        <li class="nav-item">
+        <li class="nav-item active">
             <a class="nav-link" th:href="@{/dashboard}">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Home</span></a>
@@ -54,8 +50,6 @@
 
         <!-- Divider -->
         <hr class="sidebar-divider">
-
-        <!-- Nav Item - Pages Collapse Menu -->
 
         <!-- Nav Item - Charts -->
         <li class="nav-item">
@@ -85,6 +79,7 @@
                 <span>View User</span></a>
         </li>
 
+
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
@@ -105,22 +100,20 @@
             <!-- Topbar -->
             <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-                <h3 th:text="${chatroom.chatroomName}"></h3>
+                <h3> Dashboard </h3>
 
                 <!-- Sidebar Toggle (Topbar) -->
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
 
-
                 <!-- Topbar Navbar -->
-                <ul class="navbar-nav ml-auto">
 
+                <ul class="navbar-nav ml-auto">
                     <!-- Nav Item - User Information -->
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <input id="userId" th:field="${user.id}" value="" type="hidden"/>
                             <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${user.name}"></span>
                             <img class="img-profile rounded-circle"
                                  src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
@@ -139,30 +132,38 @@
             </nav>
             <!-- End of Topbar -->
 
+            <!-- Begin Page Content -->
             <div class="container-fluid">
-                <div class="container bootstrap snippets bootdey">
-                    <div class="row">
-                        <!-- Chat -->
-                        <div class="col-md-12 bg-white ">
-                            <div class="chat-message" style="overflow-y: auto !important; height: 80vh;">
-                                <ul class="chat" id="chatbox">
-                                </ul>
-                            </div>
-                            <div class="chat-box bg-white">
-                                <form>
-                                    <div class="input-group">
-                                    <input class="form-control border no-shadow no-rounded"
-                                           placeholder="Type your message here" id="message">&nbsp;
-                                    <span class="input-group-btn">
-                                            <button class="btn btn-info no-rounded" id="send"><i class="fa fa-send"></i></button>
-                                        </span>
-                                    </div><!-- /input-group -->
-                                </form>
-                            </div>
+
+                <!-- Content Row -->
+                <div class="row">
+
+                        <div class="col-md-4"></div>
+                        <div class="col-md-3">
+                            <h3> Update Chatroom </h3>
+                            <hr/>
+                            <form id="update-form" th:object="${update_chatroom}">
+                                <input type="hidden" name="id" th:field="*{id}" />
+                                <input type="hidden" name="userId" th:field="*{userId}" />
+                                <div class="form-group">
+                                    <label for="chatroomName"> Chatroom Name </label>
+                                    <input type="text" class="form-control" name="name" id="chatroomName" th:field="*{name}" placeholder="Chatroom Name" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="chatroomDesc"> Chatroom Description </label>
+                                    <input type="text" class="form-control" name="description" id="chatroomDesc" th:field="*{description}" placeholder="Chatroom Description" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn btn-info"> Update </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
+
                 </div>
+
             </div>
+            <!-- /.container-fluid -->
 
         </div>
         <!-- End of Main Content -->
@@ -177,6 +178,8 @@
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
 </a>
+
+
 
 <!-- User Modal -->
 <div th:if='${authoritiesList.contains("ROLE_ADMIN")}' class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
@@ -210,6 +213,7 @@
     </div>
 </div>
 
+
 <!-- Delete User Modal -->
 <div th:if='${authoritiesList.contains("ROLE_ADMIN")}' class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
      aria-hidden="true">
@@ -236,6 +240,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Add Chatroom Modal -->
 <div class="modal fade" id="chatroomModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
@@ -330,10 +335,6 @@
 <script th:src="@{/js/demo/chart-area-demo.js}"></script>
 <script th:src="@{/js/demo/chart-pie-demo.js}"></script>
 
-<!-- Script for Messaging -->
-<script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
-<script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-<script th:src="@{/app.js}"></script>
 <script th:src="@{/utils.js}"></script>
 <script th:src="@{/admin-utils.js}" th:if='${authoritiesList.contains("ROLE_ADMIN")}'></script>
 
