Added Unit test cases. Sonarcloud Coverage 98%

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -95,8 +95,9 @@
                     <input type="submit" class="btnSubmit" value="Login" />
                 </div>
             </form>
+            <hr/>
             <div class="form-group">
-                <a th:href="@{/register}" class="btn btn-sm btn-info"> Sign up </a>
+                <a th:href="@{/register}" class="btn btn-lg btn-info"> Sign up </a>
             </div>
         </div>
     </div>
